# evdevshift

./: LICENSE  Makefile  Makefile.am  Makefile.in  Makefile_standalone  README  config.l  config.y  config_bison.y  config_lexer.l  configure  configure.ac  ctrl_defs.h  ev_process.c  ev_process.h  evdevshift.c  ops.c  ops.h  parser.c  parser.h  scafold1.c  scafold2.py  test.conf  test1.conf
presets/: Saiteck_AV8R-01.conf
snapcraft/: snapcraft.yaml
